First working Version of Vignette CoSMic-Basic-Usage.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,8 @@ export(setup.projection)
 import(RColorBrewer)
 import(data.table)
 import(dplyr)
+import(ggplot2)
+import(grid)
 import(gridExtra)
 import(lhs)
 import(pracma)
