--- a/Fortran/src/Makefile.am
+++ b/Fortran/src/Makefile.am
@@ -3,7 +3,7 @@
 ## Process this file with automake to produce Makefile.in
 ##
 AM_LD = $MPIFC
-AM_FCFLAGS = -fbacktrace -fbounds-check -gdwarf-4
+##AM_FCFLAGS = -fbacktrace -fbounds-check -gdwarf-4
 
 bin_PROGRAMS  = CoSMic
 
