Working version of convert.RP.to.Fp. Fixed several issues with SEIR state changes. Randomized population since otherwise the random number did not find ICU risks in older population. -- Version is checked agains R-model and gives reasonable results for first wave in Germany.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(CoSMic)
 export(CoSMic.Opt)
 export(attenuate)
 export(checkpoint.check.reload)
+export(convert.Rp.to.Fp)
 export(export.csv)
 export(export.to.slaves)
 export(finalize.parallel.execution)
