Added OpenMP support.

--- a/Fortran/src/Makefile.am
+++ b/Fortran/src/Makefile.am
@@ -10,6 +10,7 @@ bin_PROGRAMS  = CoSMic
 CoSMic_SOURCES = mod_precision.f90 mod_globals.f90  \
                  mod_times.f90 \
                  mod_strings.f90 \
+                 mod_urandom.f90 \
 		 mod_pt_precision.f90 mod_pt_constants.f90 mod_pt_types.f90 mod_pt.f90 \
                  mod_list_variable.f90  quicksort_non_recur.f90 mod_qsort_c_module.f90 \
                  mod_support_fun.f90 mod_CoSMic.f90 mod_CoSMic_IO.f90 \
