adding the prelimilary routines for the GA functionality

--- a/Fortran/src/Makefile.in
+++ b/Fortran/src/Makefile.in
@@ -91,12 +91,13 @@ am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
 am_CoSMic_OBJECTS = mod_precision.$(OBJEXT) mod_globals.$(OBJEXT) \
 	mod_times.$(OBJEXT) mod_strings.$(OBJEXT) \
-	mod_pt_precision.$(OBJEXT) mod_pt_constants.$(OBJEXT) \
-	mod_pt_types.$(OBJEXT) mod_pt.$(OBJEXT) \
-	mod_list_variable.$(OBJEXT) quicksort_non_recur.$(OBJEXT) \
-	mod_qsort_c_module.$(OBJEXT) mod_support_fun.$(OBJEXT) \
-	mod_CoSMic.$(OBJEXT) mod_CoSMic_IO.$(OBJEXT) \
-	mod_data_preprocessing.$(OBJEXT) CoSMic.$(OBJEXT)
+	mod_urandom.$(OBJEXT) mod_pt_precision.$(OBJEXT) \
+	mod_pt_constants.$(OBJEXT) mod_pt_types.$(OBJEXT) \
+	mod_pt.$(OBJEXT) mod_list_variable.$(OBJEXT) \
+	quicksort_non_recur.$(OBJEXT) mod_qsort_c_module.$(OBJEXT) \
+	mod_support_fun.$(OBJEXT) mod_CoSMic.$(OBJEXT) \
+	mod_CoSMic_IO.$(OBJEXT) mod_data_preprocessing.$(OBJEXT) \
+	mod_GA.$(OBJEXT) CoSMic.$(OBJEXT)
 CoSMic_OBJECTS = $(am_CoSMic_OBJECTS)
 CoSMic_LDADD = $(LDADD)
 AM_V_P = $(am__v_P_@AM_V@)
@@ -236,6 +237,7 @@ AM_LD = $MPIFC
 CoSMic_SOURCES = mod_precision.f90 mod_globals.f90  \
                  mod_times.f90 \
                  mod_strings.f90 \
+                 mod_urandom.f90 \
 		 mod_pt_precision.f90 mod_pt_constants.f90 mod_pt_types.f90 mod_pt.f90 \
                  mod_list_variable.f90  quicksort_non_recur.f90 mod_qsort_c_module.f90 \
                  mod_support_fun.f90 mod_CoSMic.f90 mod_CoSMic_IO.f90 \
