--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,10 @@ export(CoSMic.Opt)
 export(attenuate)
 export(checkpoint.check.reload)
 export(convert.Rp.to.Fp)
-export(export.csv)
 export(export.to.slaves)
 export(finalize.parallel.execution)
+export(fres.to.dataframe)
+export(ftrain.to.dataframe)
 export(init.connectivity)
 export(init.lhc)
 export(init.parallel.execution)
@@ -29,6 +30,7 @@ export(set.optimization.params)
 export(set.pspace)
 export(set.static.params)
 export(setup.projection)
+import("rlist,")
 import(RColorBrewer)
 import(data.table)
 import(dplyr)
@@ -38,4 +40,5 @@ import(gridExtra)
 import(lhs)
 import(pracma)
 import(rlist)
+import(stringr)
 importFrom(magrittr,"%>%")
