Extended and rebuild documentation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(load.input)
 export(map.R0effects)
 export(plots.by.country)
 export(plots.by.state)
+export(plots.fortran)
 export(save.exec.params)
 export(save.input)
 export(save.optimization.params)
