--- a/Fortran/src/Makefile.am
+++ b/Fortran/src/Makefile.am
@@ -13,7 +13,7 @@ CoSMic_SOURCES = mod_precision.f90 mod_globals.f90  \
                  mod_urandom.f90 \
 		 mod_pt_precision.f90 mod_pt_constants.f90 mod_pt_types.f90 mod_pt.f90 \
                  mod_list_variable.f90  quicksort_non_recur.f90 mod_qsort_c_module.f90 \
-                 mod_support_fun.f90 mod_CoSMic_IO.f90 mod_CoSMic.f90  \
+                 mod_support_fun.f90 mod_CoSMic_IO.f90 mod_CoSMic.f90 mod_GA.f90  \
                  CoSMic.f90
 
 distclean-local:
