Updated autotools build system

--- a/Fortran/configure.ac
+++ b/Fortran/configure.ac
@@ -5,24 +5,26 @@ AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 # If --with-mpi=yes is used, try to find MPI and fail if it isn't found.
 # If --with-mpi=no is used, use a standard FC compiler instead.
 AC_ARG_WITH(mpi, [AS_HELP_STRING([--with-mpi],
-                 [compile with MPI (parallelization) support. If none is found,
-                  MPI is not used. Default: auto])
-                 ],,[with_mpi=auto])
+    [compile with MPI (parallelization) support. If none is found,
+    MPI is not used. Default: auto])
+],,[with_mpi=yes])
   
-AC_CONFIG_MACRO_DIRS([/usr/share/aclocal])
-AX_PROG_FC_MPI(
-[test x"$with_mpi" != xno],[use_mpi=yes],[
-    use_mpi=no
-    if test x"$with_mpi" = xyes; then
-      AC_MSG_FAILURE([MPI compiler requested, but couldn't use MPI.])
-    else
-      AC_MSG_WARN([No MPI compiler found, won't use MPI.])
-    fi
-  ])
-#AC_PROG_FC
+AC_OPENMP
+
+AX_PROG_FC_MPI([test x"$with_mpi" != xno],[use_mpi=yes],[
+  use_mpi=no
+  if test x"$with_mpi" = xyes; then
+    AC_MSG_FAILURE([MPI compiler requested and mandatory, but couldn't use MPI.])
+  else
+    AC_MSG_FAILURE([No MPI compiler found or --with-mpi=no was given but MPI is mandatory.])
+  fi
+])
+
 AC_CONFIG_HEADERS([config.h])
+
 AC_CONFIG_FILES([
  Makefile
  src/Makefile
 ])
+
 AC_OUTPUT
